# django-github-checks

./: .gitignore  404.html  pyproject.toml
.github/scripts/: check_coverage.py
.github/workflows/: coverage.yml  deploy.yml
assets/: DrawingControls.7eba2f26.js  DrawingLayer.b4facdb9.js  index.130a4ccc.js  vendor.8a8f6fc0.js  vendor.d97dadc8.css
github_checks/: manage.py
github_checks/example/: views.py
github_checks/github_checks/: asgi.py  settings.py  urls.py  wsgi.py
lt/: package.json  presentation.md
lt/layouts/: image-right.vue
