[tool.poetry]
name = "django-github-checks"
version = "0.1.0"
description = ""
authors = ["Alex <globophobe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
ghapi = "^0.1.19"
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
